// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resource Upload Component > file upload > should render component 1`] = `
"<div data-v-4a3fd5f0=""><button data-v-4a3fd5f0="" type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-left oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw">
    <!--v-if-->
    <!-- @slot Content of the button --> <span data-v-4a3fd5f0="" class="oc-icon oc-icon-m box-content oc-resource-icon align-middle oc-resource-icon-file"><svg data-testid="inline-svg-stub" src="icons/resource-type-file-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" style="fill: var(--oc-role-on-surface);"></svg></span> <span data-v-4a3fd5f0="" id="files-file-upload-button">Files</span>
  </button> <input data-v-4a3fd5f0="" id="files-file-upload-input" multiple="" class="upload-input-target" type="file" aria-labelledby="files-file-upload-button" name="folder" tabindex="-1"></div>"
`;

exports[`Resource Upload Component > folder upload > should render component 1`] = `
"<div data-v-4a3fd5f0=""><button data-v-4a3fd5f0="" type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-left oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw">
    <!--v-if-->
    <!-- @slot Content of the button --> <span data-v-4a3fd5f0="" class="oc-icon oc-icon-m box-content oc-resource-icon align-middle oc-resource-icon-folder"><svg data-testid="inline-svg-stub" src="icons/resource-type-folder-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" style="fill: var(--oc-color-icon-folder);"></svg></span> <span data-v-4a3fd5f0="" id="files-folder-upload-button">Folder</span>
  </button> <input data-v-4a3fd5f0="" id="files-folder-upload-input" webkitdirectory="true" mozdirectory="true" allowdirs="true" class="upload-input-target" type="file" aria-labelledby="files-folder-upload-button" name="file" tabindex="-1"></div>"
`;
